# msvtest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: DeviceModel.cpp  DeviceModel.h  IDeviceModel.cpp  IDeviceModel.h  ILogger.h  IScenarioDispatcher.h  IscenarioDispatcher.cpp  Logger.cpp  Logger.h  LongRunMonitor.cpp  LongRunMonitor.h  MsvScenarioDispatcher.cpp  MsvScenarioDispatcher.h  ScenarioDispatcher.cpp  ScenarioDispatcher.h
src/network/: SntpClient.cpp  SntpClient.h  WebClient.cpp  WebClient.h  WhoIAmScanner.cpp  WhoIAmScanner.h  WhoIAmTypes.h
src/report/: ReportGenerator.cpp  ReportGenerator.h
src/serial/: NmeaParser.cpp  NmeaParser.h  UartMonitor.cpp  UartMonitor.h
src/ui/: DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  LongRunSetupDialog.cpp  LongRunSetupDialog.h  MainWindow.cpp  MainWindow.h  SerialPortSelectionDialog.cpp  SerialPortSelectionDialog.h  StepItemWidget.cpp  StepItemWidget.h  StepSummaryCard.cpp  StepSummaryCard.h  UsbDriveSelectionDialog.cpp  UsbDriveSelectionDialog.h
src/usb/: UsbChecker.cpp  UsbChecker.h
